Fix for file content tab overlapping

--- a/private/css/style.css
+++ b/private/css/style.css
@@ -311,6 +311,11 @@ hr {
     color: #ffffff;
 }
 
+#torrentFilesFilterToolbar {
+    float: right;
+    margin-right: 5px;
+}
+
 #properties {
     background-color: #e5e5e5;
 }
